# found-integration-testing

./: .gitignore  CMakeLists.txt  README.md  install.sh  run.sh  test.sh  test_found_tools.sh
src/: integration_runner.cpp  integration_runner.hpp  main.cpp
